--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "dev": "refine dev",
     "build": "tsc && refine build",
     "preview": "refine start",
-    "refine": "refine"
+    "refine": "refine",
+    "check": "biome check .",
+    "check:apply": "biome check . --apply"
   },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
