SAFE-14 setup shadcn/ui and implement app shell

--- a/biome.json
+++ b/biome.json
@@ -82,6 +82,9 @@
         "useGetterReturn": "error",
         "useNamespaceKeyword": "error",
         "useValidTypeof": "error"
+      },
+      "nursery": {
+        "useSortedClasses": "warn"
       }
     }
   },
