--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@refinedev/cli": "^2.16.29",
     "@refinedev/core": "^4.49.0",
     "@refinedev/devtools": "^1.1.37",
     "@refinedev/kbar": "^1.3.8",
     "@refinedev/react-router-v6": "^4.5.7",
     "@refinedev/simple-rest": "^5.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.373.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.1",
@@ -20,8 +28,11 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.0",
-    "vite": "^4.5.3"
+    "vite": "^5.2.10"
   },
   "scripts": {
     "dev": "refine dev",
