--- a/biome.json
+++ b/biome.json
@@ -38,6 +38,7 @@
         "noUnreachableSuper": "error",
         "noUnsafeFinally": "error",
         "noUnsafeOptionalChaining": "error",
+        "noUnusedImports": "warn",
         "noUnusedLabels": "error",
         "noUnusedVariables": "warn",
         "useExhaustiveDependencies": "warn",
