--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_ORIGIN="http://localhost:3000/"
+VITE_API_ORIGIN="http://localhost:3000"
 VITE_SESSION_TOKEN_KEY="_auth_session"
+VITE_UNDOABLE_TIMEOUT_MS=5000
