--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@refinedev/react-hook-form": "^4.8.16",
     "@refinedev/react-router-v6": "^4.5.7",
     "@refinedev/react-table": "^5.6.8",
-    "@refinedev/simple-rest": "^5.0.4",
     "@tanstack/react-table": "^8.16.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -42,7 +41,7 @@
   },
   "scripts": {
     "dev": "refine dev",
-    "build": "tsc && refine build",
+    "build": "tsc && refine build --base=/app/",
     "preview": "refine start",
     "refine": "refine",
     "check": "biome check .",
