SAFE-17 wip: initial implementation of invitations list and create

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "dev": "refine dev",
     "build": "tsc && refine build --base=/app/",
-    "preview": "refine start",
+    "preview": "refine start --base=/app/",
     "refine": "refine",
     "check": "biome check .",
     "check:apply": "biome check . --apply"
