--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.373.0",
     "next-themes": "^0.3.0",
+    "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
