--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.1",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^18.19.31",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
