--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-table": "^8.16.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.373.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
