--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.378.0",
     "next-themes": "^0.3.0",
-    "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
@@ -37,10 +36,12 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   },
   "scripts": {
     "dev": "refine dev",
@@ -48,7 +49,8 @@
     "preview": "refine start --base=/app/",
     "refine": "refine",
     "check": "biome check .",
-    "check:apply": "biome check . --apply"
+    "check:apply": "biome check . --apply",
+    "test": "vitest"
   },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
